[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,9 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi Shubhankeet,Lets go to your webapp!!
+            Hi Shubhankeet,Lets get started!!
+            <h4>Welcome to your Webapp</h4>
+            You are green to go!!
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
