[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,2 +1,33 @@
 <html>
+    <head>
+        <title>
+            Article one 1:Shubhankeet Senapati
+        </title>
+    </head>
+    <body>
+        <div>
+            <a href="/">Home</a>
+        </div>
+        <hr/>
+        <h3>
+            Article One
+        </h3>
+        <div>
+            August 24,2017
+        </div>
+        <div>
+            <p>
+                This is the content for my first article.Hello Everyone.Myself Shhubhankeet Senapati.I am from Odisha.I was born and brought up in Rourkela,Sundergarh,Odisha.Rourkela is one of the most beautiful place in India;one of the cleanest city filed with greenery everywhere.I completed my high school at Ispat English Medium School,a well recognized school in Odisha.
+            </p>
+            <p>
+              Every day was like a new day in  Rourkela;filled with enjoyment and fun. 
+           </p>
+           <p>
+               Whether it was at school or outside school,playing different sports,hanging out with friends,etc was just awesome!!
+           </p>
+           <p>
+               I like to play football and volleyball out of which i have played volleyball the most.I still play that game whenenver i go home during my vaccations,with my friends.
+           </p>
+        </div>
+    </body>
 </html>
