--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>
-            Article three 1:Shubhankeet Senapati
+            Article three:Shubhankeet Senapati
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
