--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,8 +4,17 @@
             Article one 1:Shubhankeet Senapati
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <style>
+            .container{
+                max-width: 800px;
+                margin: 0 auto;
+                color: red;
+                font-family: sans-serif;
+            }
+        </style>
     </head>
     <body>
+        <div class="container">
         <div>
             <a href="/">Home</a>
         </div>
@@ -29,6 +38,7 @@
            <p>
                I like to play football and volleyball out of which i have played volleyball the most.I still play that game whenenver i go home during my vaccations,with my friends.
            </p>
+        </div>
         </div>
     </body>
 </html>
