[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -13,6 +13,9 @@
             <h4>Welcome to your Webapp</h4>
             You are green to go!!
         </div>
+        <script>
+            alert('Hi Shubhankeet,I\'m Javascript!');
+        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
