--- a/ui/index.html
+++ b/ui/index.html
@@ -8,7 +8,7 @@
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
-        <div class="center text-big bold">
+        <div id='main.text' class="center text-big bold">
             Hi Shubhankeet,Lets get started!!
             <h4>Welcome to your Webapp</h4>
             You are green to go!!
