--- a/ui/index.html
+++ b/ui/index.html
@@ -4,18 +4,24 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
+        <div class="container">
         <div class="center">
-            <img id='Bunty' src="/ui/madi.png" class="img-medium"/>
+            <img id='Bunty' src="https://pbs.twimg.com/profile_images/810015870328205313/8rN-hAvK_400x400.jpg" class="img-medium"/>
         </div>
-        <br>
-        <div id='main.text' class="center text-big bold">
-            Hi Shubhankeet,Lets get started!!
-            <h4>Welcome to your Webapp</h4>
-            You are green to go!!
+        <h3>Personal</h3>
+        <div>
+            Hi!!My name is Shubhnakeet Senapati.
         </div>
-        <script>
-            alert('Hi Shubhankeet,I\'m Javascript!');
-        </script>
+        <hr/>
+        <h3>Professional</h3>
+        <div>
+            I am doing my B-Tech in in cse at SRM UNIVERSITY.
+        </div>
+        <hr/>
+        <div class="footer">
+            This button <button id="counter">Click me!</button>has been clicked <span id="count">0</span>times.
+        </div>
+        </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
